implementations/rust/ockam/ockam/tests/node/std/fail_if_item_is_not_a_function.stderr
error: expected `fn`
 --> tests/node/std/fail_if_item_is_not_a_function.rs:2:1
  |
2 | struct A {}
  | ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node/std/fail_if_item_is_not_a_function.rs:2:12
  |
2 | struct A {}
  |            ^ consider adding a `main` function to `$DIR/tests/node/std/fail_if_item_is_not_a_function.rs`
